--- a/index.html
+++ b/index.html
@@ -19,16 +19,15 @@
     <!-- header section  -->
     <header>
         <nav class="navbar bg-light">
-            <div class="container-fluid">
+            <div class="container-fluid mw-100">
               <h1>PHONE FINDER</h1>
             </div>
         </nav>
 
-        <div class="container d-flex justify-content-center">
-            <div class="d-flex w-75">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-primary" type="submit">Search</button>
-            </div>
+        <div class="container d-flex justify-content-center w-75 my-5">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-primary" type="submit">Search</button>
+            
         </div>
 
           
@@ -39,7 +38,7 @@
     <main>
 
         <!-- card section  -->
-        <div class="container">
+        <div class="container my-5">
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
                   <div class="card h-100">
@@ -48,9 +47,9 @@
                     <!-- phone info  -->
                     <div class="card-body">
                         <!-- phone name  -->
-                      <h5 class="card-title">Card title</h5>
-                      phone brand
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <h5 class="card-title">Phone Name</h5>
+                      <!-- phone brand  -->
+                      <p class="card-text">This is the name of the phone brand</p>
                     </div>
                     <div class="card-footer bg-white border-0">
                         <a href="#" class="btn btn-primary">Explore</a>
