--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <!-- bootstrap css CDN  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+    <!-- font embading  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
+
     <!-- title  -->
     <title>Phone Finder</title>
 </head>
@@ -18,11 +23,9 @@
 <body>
     <!-- header section  -->
     <header>
-        <nav class="navbar bg-light">
-            <div class="container-fluid mw-100">
-              <h1>PHONE FINDER</h1>
-            </div>
-        </nav>
+        <div class="page-title bg-light">
+            <h1 class="text-center">Phone Finder</h1>
+        </div>
 
         <div class="container d-flex justify-content-center w-75 my-5">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
