--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
     <!-- main body  -->
     <main>
-        <!-- explore section  -->
-        <div id="explore-section" class="container w-75">
+        <!-- explore section 
+        <div id="explore-result" class="container w-75">
             <div class="card mb-3">
                 <img class="card-img-top" src="..." alt="Card image cap">
                 <div class="card-body">
@@ -51,7 +51,7 @@
                   <p class="card-text"><small class="text-muted">Others</small></p>
                 </div>
               </div>
-        </div>
+        </div> -->
           
 
 
