--- a/index.html
+++ b/index.html
@@ -39,19 +39,10 @@
 
     <!-- main body  -->
     <main>
-        <!-- explore section 
-        <div id="explore-result" class="container w-75">
-            <div class="card mb-3">
-                <img class="card-img-top" src="..." alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Phone Name</h5>
-                  <p class="card-text"><small class="text-muted">Release Date</small></p>
-                  <p class="card-text"><small class="text-muted">Main Feature</small></p>
-                  <p class="card-text"><small class="text-muted">Sensors</small></p>
-                  <p class="card-text"><small class="text-muted">Others</small></p>
-                </div>
-              </div>
-        </div> -->
+        <!-- explore section  -->
+        <div id="explore-result" class="container w-75 mb-3" style="max-width: 640px;">
+
+        </div>
           
 
 
