others issue solved

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
     <!-- main body  -->
     <main>
         <!-- explore section  -->
-        <div id="explore-result" class="container w-75 mb-3" style="max-width: 640px;">
-
+        <div id="explore-result" class="container w-75 mb-3" style="max-width: 840px;">
         </div>
           
 
@@ -56,8 +55,8 @@
 
               <!-- show more  -->
 
-              <div class="d-grid gap-2 d-md-flex justify-content-md-end my-5">
-                <button id="show-more-button" class="btn btn-outline-primary me-md-2" type="button">Show More</button>
+              <!-- <div class="d-grid gap-2 d-md-flex justify-content-md-end my-5">
+                <button id="show-more-button" class="btn btn-outline-primary me-md-2" type="button">Show More</button> -->
 
                 <!-- const showMoreButton = document.getElementById('show-more-button');
     showMoreButton.style.display = 'block'; -->
